--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
